Fix internal link gap

--- a/assets/scss/_fuji-theme/_style.scss
+++ b/assets/scss/_fuji-theme/_style.scss
@@ -4,6 +4,10 @@
   background-color: var(--color-primary);
 }
 
+:target {
+  scroll-margin-top: 5rem;
+}
+
 body {
   background-color: var(--color-bg);
   color: var(--color-font);
